# agilex-ed-robotics

./: .gitconfig  .gitmodules  LICENSE  Readme.md  security.md
HPS_ISP_CAM_ROBOTICS/: AGX_5E_Modular_Devkit_HPS_ISP_CAM_ROB.xml  Readme.md  design.dawf  design.qsf
HPS_ISP_VIS_DOC3x2_ROBOTICS/: AGX_5E_Modular_Devkit_HPS_ISP_VIS_DOC3x2_ROB.xml  Readme.md  design.sdc
custom_user_subsystems/drive_subsystems/dsp_builder_models/DF_fixp16_alu_av/: DF_fixp16_alu_av.slx  foc_blocks.slx  setup_DF_fixp16_alu_av.m  setup_sim_DF_fixp16_alu.m  setup_verify_DF_fixp16_alu.m  sim_DF_fixp16_alu.slx  verify_DF_fixp16_alu.slx
custom_user_subsystems/drive_subsystems/non_qpds_ip/: common.ipx  drive_subsystem.ipx
custom_user_subsystems/drive_subsystems/software/niosv/common/: CMakeLists.txt  app_cfg.h  demo_cfg.c  main.c  main.h
custom_user_subsystems/drive_subsystems/software/niosv/common/components/: encoder.h  encoder_priv.h  ssg_emb_dsm.c  ssg_emb_dsm.h  ssg_emb_pwm.c  ssg_emb_pwm.h  ssg_emb_sd_adc.c  ssg_emb_sd_adc.h
custom_user_subsystems/drive_subsystems/software/niosv/common/components/dspba/: DF_fixp16_alu_av.c  DF_fixp16_alu_av.h  DF_fixp16_alu_av_mmap.h
custom_user_subsystems/drive_subsystems/software/niosv/common/components/qep/: qep.c  qep.h  qep_fn.c
custom_user_subsystems/drive_subsystems/software/niosv/common/components/resolver/: AU6805.c  AU6805.h  AU6805_fn.c
custom_user_subsystems/drive_subsystems/software/niosv/common/mc/: arm_cos_q15.c  arm_sin_q15.c  mc.c  mc.h  mc_debug.c  mc_debug.h  mc_debug_fn.c  mc_dsp.c  mc_dsp.h  mc_nios_perf.c  mc_nios_perf.h  mc_params.h  motion_task.c  motor_task.c  motor_task.h  sin_cos_q15.h
custom_user_subsystems/drive_subsystems/software/niosv/common/mc/foc/: foc.c  foc.h
custom_user_subsystems/drive_subsystems/software/niosv/common/motorsim/: motor.c  motor.h  motor_functions.h
custom_user_subsystems/drive_subsystems/software/niosv/common/motorsim/dspba_motorsim/: DF_fixp16_alu_av_MOTORMODEL.c  DF_fixp16_alu_av_MOTORMODEL.h  DF_fixp16_alu_av_MOTORMODEL_mmap.h
custom_user_subsystems/drive_subsystems/software/niosv/common/os/: debug_print.c  monitor_task.c
custom_user_subsystems/drive_subsystems/software/niosv/common/perf/: altera_avalon_performance_counter.c  altera_avalon_performance_counter.h  perf_print_formatted_report.c
custom_user_subsystems/drive_subsystems/software/niosv/common/platform/: platform_linker.h
custom_user_subsystems/drive_subsystems/software/niosv/common/platform/common/: platform.c  platform.h
custom_user_subsystems/drive_subsystems/software/niosv/common/platform/motors/: motor_types.c  motor_types.h
custom_user_subsystems/drive_subsystems/software/niosv/common/platform/powerboard/: adc.c  doc_adc.c  doc_adc.h  powerboard.c  powerboard.h
custom_user_subsystems/drive_subsystems/software/niosv/common/waveform/: waveform.c  waveform.h
custom_user_subsystems/drive_subsystems/subsystems/: control_create.tcl  drive_create.tcl  user_create.tcl
custom_user_subsystems/isp_subsystems/dp_tx_subsystem/: dp_tx_create.tcl  dp_tx_subsystem.qsf.terp  dp_tx_subsystem.sdc.terp
custom_user_subsystems/isp_subsystems/isp_4k_in_subsystem/: isp_4k_in_create.tcl
custom_user_subsystems/isp_subsystems/isp_4k_out_subsystem/: isp_4k_out_create.tcl
custom_user_subsystems/isp_subsystems/isp_4k_rob_subsystem/: isp_4k_rob_create.tcl
custom_user_subsystems/isp_subsystems/isp_4k_subsystem/: isp_4k_create.tcl
custom_user_subsystems/isp_subsystems/software_rob/: settings.bsp
custom_user_subsystems/isp_subsystems/software_rob/src/: CMakeLists.txt
custom_user_subsystems/isp_subsystems/software_rob/src/isp_app_src/: LICENSE  board.c  board.h  main.c
custom_user_subsystems/isp_subsystems/software_rob/src/isp_app_src/arUco_helpers/: aruco_square_placement.c  aruco_square_placement.h
custom_user_subsystems/isp_subsystems/software_rob/src/isp_app_src/display_port/: aux_decoder.c  aux_decoder.h  debug.c  debug.h  dp_config.h  dp_support.c  dp_support.h  dptx_app_defs.h  dptx_formats.c  dptx_formats.h  intel_axi2cv.c  intel_axi2cv.h  intel_axi2cv_regs.h  intel_vab_core.c  intel_vab_core.h  intel_vab_core_io.h  intel_vab_core_regs.h  tx_utils.c  tx_utils.h
custom_user_subsystems/isp_subsystems/software_rob/src/isp_app_src/sensors/: framos_gmsl.c  framos_gmsl.h  intel_fpga_i2c.c  intel_fpga_i2c.h  sensor_imx678.c  sensor_imx678.h
custom_user_subsystems/isp_subsystems/software_rob/src/isp_app_src/vvp_cores/: csc_coeff.h  vvp_cores_cfg.c  vvp_cores_cfg.h
custom_user_subsystems/motor_model_subsystem/: motor_model_create.tcl
custom_user_subsystems/motor_model_subsystem/non_qpds_ip/: motor_model_subsystem.ipx
custom_user_subsystems/non_qpds_ip/: altera_rob_aruco.ipx
custom_user_subsystems/non_qpds_ip/altera_rob_aruco/: altera_rob_aruco_algo_comp_hw.tcl  altera_rob_aruco_hw.tcl  altera_rob_aruco_scheduler_hw.tcl
custom_user_subsystems/non_qpds_ip/intel_vvp_icon/: intel_vvp_icon_algo_comp_hw.tcl  intel_vvp_icon_hw.tcl  intel_vvp_icon_scheduler_hw.tcl
custom_user_subsystems/non_qpds_ip/intel_vvp_remosaic/: intel_vvp_remosaic.sdc  intel_vvp_remosaic_hw.tcl
sw/: README.md  kas-camera.yml  kas-vision-doc.yml
sw/meta-altera-fpga/: README.md  kas-example.yml
sw/meta-altera-fpga/docs/: flash_sd_card.md
sw/meta-altera-fpga/kas/: base.yml  bsp.yml  dev.yml  docker.yml  oe-core.yml  realsense.yml
sw/meta-altera-fpga/meta-altera-bsp/: README.md
sw/meta-altera-fpga/meta-altera-core/: README.md
sw/meta-altera-fpga/meta-altera-devkit/: README.md
sw/meta-altera-fpga/meta-altera-vendor/: README.md
sw/meta-robotics-camera/conf/: layer.conf
(+649 files in other folders)
